@@ -1,5 +1,7 @@
 v 0.4.0
 - migrate to SDL2
+- native SDL ALT-F11 fullscreen support instead of custom F11
+- no special OGL support outside of SDL now (NO_OGL is now implied)
 v 0.3.7
 - remove dependency on graphicsmagick
 - no actual game code changes besides version bump
